# Jinja2

./: .gitignore  README.md  function.json  function_app.py  pyproject.toml  requirements.txt
WrapperFunction/: __init__.py  myapp.py
WrapperFunction/demo1 copy/: __init__.py
WrapperFunction/jinja/: README.md  __init__.py
WrapperFunction/jinja/routes/: README.md  __init__.py  csv_data.py  json_data.py  pandas_data.py  sqlite_data.py
WrapperFunction/jinja_demo/: __init__.py
WrapperFunction/jinja_demo/routers/api_routes/: __init__.py
WrapperFunction/myjinja/origem/: __init__.py  from_csv.py  from_json.py  from_pandas.py  from_sqlite.py
data/: cities_sample.csv  cities_sample.json  cities_sample.parquet  cities_sqlite3.db
templates/: cities_csv.html  cities_dataframe.html  cities_json.html  cities_sqlite.html
