[tool.poetry]
name = "jinja"
version = "0.1.0"
description = ""
authors = ["rox87 <rodrigohbx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "^1.18.0"
fastapi = "^0.109.0"
jinja2 = "^3.1.3"
pandas = "^2.2.0"
uvicorn = "^0.27.0"
fastparquet = "^2023.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
